# latent-space-navigator

./: .env.example  .gitignore  README.md  package.json  vercel.json
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  embedding_pipeline.py  main.py  schemas.py  vector_math.py
backend/scripts/: generate_coordinates.py
backend/tests/: test_embedding_pipeline.py  test_vector_math.py
data/sample/: coordinates.json
frontend/: next-env.d.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: LatentScene.tsx  NavigatorShell.tsx
frontend/lib/: distance.ts  hciLogger.ts  loadPoints.ts  types.ts
frontend/test/: distance.test.ts  hciLogger.test.ts
